store/src/styles/sections/placing-order-info.scss
.hern-placing-order-info__wrapper {
   display: flex;
   gap: 40px;
}

.hern-placing-order-info__left {
   //    border: 1px solid red;
   width: 432px;
}

.hern-placing-order-info__right {
   //    border: 1px solid green;
   width: 520px;
}

.hern-placing-order-info__header {
   display: flex;
   align-items: center;
   justify-content: space-between;
   margin-bottom: 0.281rem;
}
.hern-placing-order-info__header__title {
   font-size: 1rem;
   line-height: 1.75rem;
   color: #5f5f5f;
   font-family: 'Lato';
   font-style: normal;
   font-weight: 500;
}
.hern-placing-order-info__add-on__header {
   margin-top: 0.75rem;
   margin-bottom: 0.5rem;
   padding-bottom: 0.25rem;
   border-bottom-width: 1px;
   display: flex;
   align-items: center;
   justify-content: space-between;
}
.hern-placing-order-info__add-on__header__title {
   font-size: 1.125rem;
   line-height: 1.75rem;
   color: rgba(55, 65, 81, 1);
}
.hern-placing-order-info__billings__title {
   font-family: 'Lato';
   font-style: normal;
   font-weight: 500;
   font-size: 1rem;
   color: #5f5f5f;
   line-height: 1.2;
   margin-bottom: 4.5px;
}
.hern-placing-order-info__address {
   padding: 12px;
   background: #ffffff;
   border: 1px solid rgba(51, 51, 51, 0.1);
   border-radius: 8px;
   margin-bottom: 40px;
   &__delivery,
   &__pickup {
      font-family: 'Inter';
      font-style: normal;
      font-weight: 500;
      font-size: 14px;
      line-height: 17px;
      color: rgba(51, 51, 51, 0.4);
      padding: 14px;
      background: #f9f9f9;
      box-shadow: 0px 1px 5px rgba(0, 0, 0, 0.08);
      border-radius: 8px;
   }
}

.hern-placing-order-info__go-to-order__btn,
.hern-placing-order-info__early-pay__btn {
   font-family: 'Inter';
   font-style: normal;
   font-weight: 500;
   font-size: 20px;
   line-height: 24px;
   color: #ffffff;
   padding: 12px 16px;
   height: auto;
   width: 100%;
   border-radius: 999px;
   margin-top: 1rem;
   &:hover {
      opacity: 0.8;
   }
}

.hern-placing-order-info__btn {
   width: 100%;
   text-align: center;
}

